correction de petits bugs d'alignement

--- a/scss/pages_scss/_accueil.scss
+++ b/scss/pages_scss/_accueil.scss
@@ -9,7 +9,7 @@ body{
     font-family: $font2;
     color: $black;
     position: relative;
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
     background-color: $erieblue;
     font-size: 1rem;
@@ -29,8 +29,9 @@ a{
 }
 .separator{
     width:40%;
-    height: 1px;
+    height: 2px;
     background-color: $orange;
+    margin: 0 auto;
 }
 
 
