--- a/scss/pages_scss/_footer.scss
+++ b/scss/pages_scss/_footer.scss
@@ -1,18 +1,19 @@
 //Création par Pilou le 05/10/21
-
 footer{
     width: 100%;
+    padding: 0.5em;;
     background: $gray 50%;
+    border-top: 1px dashed $dark;
     display: flex;
     flex-direction: column;
-    border-top: 1px dashed $dark;
     h5{
         font-size: 2em;
     }
 }
+
 .footer-column{
     margin: 1em;
-    width:100%;
+    width:auto;
     text-align: center;
     a{
         display: flex;
