--- a/scss/pages_scss/_main.scss
+++ b/scss/pages_scss/_main.scss
@@ -2,8 +2,8 @@
 
 //general-----------------------------------------------
 main{
-    padding: 1em 0;
     width: 100%;
+    padding: 1em 0;
     text-align: center;
     h1, h2, h3{
         margin-bottom: 0.5em;
@@ -27,6 +27,7 @@ h4{
 
 
 section{
+    width: auto;
     margin: 1em;
 }
 
