--- a/scss/pages_scss/_nav.scss
+++ b/scss/pages_scss/_nav.scss
@@ -1,7 +1,9 @@
 //Création par Pilou le 24/09/21
 // Maj par Pilou le 05/10/2021
 
-
+nav{
+    width:100%;
+}
 
 
 // Bouton hamburger-----------------------------------------------
